@@ -1,0 +1,19 @@
+.TH iom_abort 3
+.SH NAME
+iom_abort \- abort all pending iom_wait calls
+.SH SYNTAX
+.B #include <libowfat/io.h>
+
+int \fBiom_abort\fP(iomux_t* c);
+.SH DESCRIPTION
+\fIiom_abort\fR will cause all currently running instances of
+\fIiom_wait\fR to return immediately with return value -2.
+
+.SH "LINKING"
+You may have to add \fI-lpthread\fR to the command line in the linking
+step.
+
+.SH "RETURN VALUE"
+iom_abort returns 0 on success and -1 on error, setting errno.
+.SH "SEE ALSO"
+iom_init, iom_add, iom_wait
